--- a/notebooks.ipynb
+++ b/notebooks.ipynb
@@ -117,7 +117,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit",
+   "display_name": "Python 3.9.13 ('kzspace-ePujzJDD')",
    "language": "python",
    "name": "python3"
   },
@@ -135,7 +135,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "397704579725e15f5c7cb49fe5f0341eb7531c82d19f2c29d197e8b64ab5776b"
+    "hash": "77fcd6899ab62238e4635177e8a5c03feba212e8035c96e2c3b148fa0bab0dd1"
    }
   },
   "widgets": {
