--- a/_sources/linear-algebra/gaussian-elimination.ipynb
+++ b/_sources/linear-algebra/gaussian-elimination.ipynb
@@ -28,42 +28,42 @@
     "Let's look at an example.\n",
     "\n",
     "$$\n",
-    "\\begin{eqnarray*}\n",
+    "\\begin{aligned}\n",
     "x_1 - x_2 + x_3 & = & 3\\\\\n",
     "2x_1 + x_2 + 8x_3 & = & 18\\\\\n",
     "4x_1 + 2x_2 -3x_3 & = & -2 \n",
-    "\\end{eqnarray*}\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "We could swap the first and last equation,\n",
     "\n",
     "$$\n",
-    "\\begin{eqnarray*}\n",
+    "\\begin{aligned}\n",
     "4x_1 + 2x_2 -3x_3 & = & -2 \\\\\n",
     "2x_1 + x_2 + 8x_3 & = & 18\\\\\n",
     "x_1 - x_2 + x_3 & = & 3\n",
-    "\\end{eqnarray*}\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "or we could multiply the first equation by $5$,\n",
     "\n",
     "$$\n",
-    "\\begin{eqnarray*}\n",
+    "\\begin{aligned}\n",
     "5x_1 - 5x_2 + 5x_3 & = & 15\\\\\n",
     "2x_1 + x_2 + 8x_3 & = & 18\\\\\n",
     "4x_1 + 2x_2 -3x_3 & = & -2 \n",
-    "\\end{eqnarray*}\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "or we could add 2 times the first equation to the last equation.\n",
     "\n",
     "\n",
     "$$\n",
-    "\\begin{eqnarray*}\n",
+    "\\begin{aligned}\n",
     "x_1 - x_2 + x_3 & = & 3\\\\\n",
     "2x_1 + x_2 + 3x_3 & = & 8\\\\\n",
     "6x_1 \\quad\\quad -x_3 & = & 4 \n",
-    "\\end{eqnarray*}\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "The last operation is the most important because it allows us to *eliminate* a variable from one of the equations.  Note that the third equation no longer contains the $x_2$ term.  This is the key to the elimination algorithm.\n",
